@@ -71,7 +71,7 @@
             // 프로젝트 참여 인원 가져오기
             sellerServiceImpl.proPaidCnt(projectDtoList);
             for (int i = 0; i < projectDtoList.size() ; i++) {
-                projectDtoList.get(i).setMainPageImgPath(UPLOAD_PATH+projectDtoList.get(i).getStoredFileName().getFirst());
+                projectDtoList.get(i).setMainPageImgPath(UPLOAD_PATH+projectDtoList.get(i).getStoredFileName().get(0));
             }
             model.addAttribute("projectDtos", projectDtoList.subList(0, Math.min(12, projectDtoList.size()))); // 초기 12개 데이터만 전달
             // 일 방문자 수 증가
